# BookLeafPub-assignment-2

./: .gitignore  Dockerfile  README.md  airtable_logger.py  analyze_y.py  app.py  config.py  detection.py  drive_monitor.py  email_sender.py  main.py  ocr_test.py  ocr_test2.py  pyproject.toml  requirements.txt  robust_ocr.py  run_debug.bat  schemas.py  t.py  test_geo.py
assignment/: assignment.txt
